examples/simple/posix/UB-PTHREAD8-bad.output
Error: UB-PTHREAD8
Description: Called trylock on an object that was not initialized with pthread_mutex_init.
Type: Undefined behavior.
See also: POSIX 2008 sec. pthread_mutex_trylock
  at pthread_mutex_trylock(UB-PTHREAD8-bad.c:14)
  at main(UB-PTHREAD8-bad.c:14)
  at <file-scope>(<unknown>)
